2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c:
	* src/libtracker-common/tracker-log.c:
	* src/libtracker-common/tracker-nfs-lock.c:
	* src/libtracker/tracker-files.c: 
	* src/libtracker/tracker-get-meta-for-folder.c:
	* src/libtracker/tracker-query.c:
	* src/tracker-applet/tracker-applet.c: 
	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c: Changed all locations to use
	"initialize" and "finalize" instead of the en_GB version for
	consistency. 

2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (path_should_be_ignored): Do
	UTF-8 validity check here instead of later on when we have wasted
	more time processing files and folders.

2008-06-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-crawler.c: Bugfix, no longer freeing up 
	already freed GStrv

2008-06-16  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (crawler_finalize): Make sure we
	clean up the async queue if we finalise the crawler and that means
	cleaning up the data on the queue too.

2008-06-16  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make all calls to GIO
	asynchronous. This has increased the speed of traversing the file
	system. Also we now only get the name and type of every file we
	traverse, this significantly improved performance. Debug
	statements are turned off now by default to improve performance.
	
	* src/trackerd/tracker-monitor.c: Debug statements are turned off
	now by default to improve performance.

2008-06-16  Ivan Frade  <ivan.frade@nokia.com>

	* configure.ac
	* tests/Makefile.am
	* tests/common/Makefile.am
	* tests/common/tracker-test-helpers.c
	* tests/common/tracker-test-helpers.h: New library with common
	code for all tests.
	
	* tests/libtracker-common/tracker-ontology-test.c
	* tests/libtracker-common/Makefile.am
	* tests/libtracker-common/tracker-type-utils-test.c: Added unit
	tests to tracker-type-utils.
